# splice

./: Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml
openspec/changes/remote-modules/: design.md  proposal.md  tasks.md
openspec/changes/remote-modules/specs/git-module-source/: spec.md
openspec/changes/remote-modules/specs/module-cli/: spec.md
openspec/changes/remote-modules/specs/module-lockfiles/: spec.md
openspec/changes/remote-modules/specs/module-naming/: spec.md
sample/: splice.toml
sample/tasks/: splice.toml
sample/tasks/templates/: tasks.toml
src/: config.rs  main.rs  module.rs  sync.rs  validator.rs
tests/: cli_tests.rs
tests/cmd/: basic_splice.md  basic_templating.md  complex_args.md  config_management.md  dotted_splice_name.md  partial_failure.md  templated_path.md  unterminated_splice.md
tests/cmd/basic_splice.in/: mise.toml  splice.toml
tests/cmd/basic_splice.in/module/: splice.toml
tests/cmd/basic_splice.out/: mise.toml
tests/cmd/basic_templating.in/: splice.toml
tests/cmd/basic_templating.in/module/: splice.toml
tests/cmd/basic_templating.out/: all_context.txt
tests/cmd/complex_args.in/: splice.toml
tests/cmd/complex_args.in/module/: splice.toml
tests/cmd/complex_args.out/: greetings.txt  tools.toml  users.md
tests/cmd/dotted_splice_name.in/: config.txt
tests/cmd/partial_failure.out/: failure.txt
tests/cmd/templated_path.in/: splice.toml
tests/cmd/templated_path.in/module/: splice.toml
tests/cmd/templated_path.out/: HELLO.txt
tests/cmd/unterminated_splice.in/: config.txt  splice.toml
(+10 files in other folders)
